force-app/main/default/objects/Kerridge_Order_Line__c/Kerridge_Order_Line__c.object-meta.xml
<CustomObject>
    <label>Kerridge Order Line</label>
    <nameField>
        <label>Kerridge Order Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kerridge Order Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>