force-app/main/default/objects/Kerridge_Order_Line__c/fields/D_Line__c.field-meta.xml
<CustomField>
    <fullName>D_Line__c</fullName>
    <label>D Line</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>