force-app/main/default/objects/Kerridge_Order_Line__c/fields/Format_Status__c.field-meta.xml
<CustomField>
    <fullName>Format_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Format Status</label>
    <type>Checkbox</type>
</CustomField>