force-app/main/default/objects/Kerridge_Order_Line__c/fields/H_Reference__c.field-meta.xml
<CustomField>
    <fullName>H_Reference__c</fullName>
    <externalId>true</externalId>
    <label>H Reference</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>