force-app/main/default/objects/Kerridge_Order_Line__c/fields/Kerridge_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Kerridge_Order_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kerridge Order Id</label>
    <referenceTo>Kerridge_Order__c</referenceTo>
    <relationshipLabel>Kerridge Order Lines</relationshipLabel>
    <relationshipName>Kerridge_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>