force-app/main/default/objects/Kerridge_Order_Line__c/fields/Line_description__c.field-meta.xml
<CustomField>
    <fullName>Line_description__c</fullName>
    <label>Line description</label>
    <type>TextArea</type>
</CustomField>