force-app/main/default/objects/Kerridge_Order_Line__c/fields/Line_ship_date__c.field-meta.xml
<CustomField>
    <fullName>Line_ship_date__c</fullName>
    <label>Line ship date</label>
    <type>Date</type>
</CustomField>