force-app/main/default/objects/Kerridge_Order_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Kerridge Order Lines</relationshipLabel>
    <relationshipName>Kerridge_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>